--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,18 @@ body {
     height: calc(100% - 125px);
     margin: 15px;
     overflow: auto;
+
+    /* Generated from https://css-scroll-shadows.now.sh/ */
+    
+    background: 
+        linear-gradient(#242528 33%, rgba(36,37,40, 0)),
+        linear-gradient(rgba(36,37,40, 0), #242528 66%) 0 100%,
+        radial-gradient(farthest-side at 50% 0, rgba(255,255,255, 0.5), rgba(0,0,0,0)),
+        radial-gradient(farthest-side at 50% 100%, rgba(255,255,255, 0.5), rgba(0,0,0,0)) 0 100%;
+    background-color: #242528;
+    background-repeat: no-repeat;
+    background-attachment: local, local, scroll, scroll;
+    background-size: 100% 54px, 100% 54px, 100% 18px, 100% 18px;
 }
 
 #lyricsbox::-webkit-scrollbar {
@@ -120,7 +132,7 @@ body {
 
 #lyrics {
     text-align: center;
-    color: white;
+    color: gainsboro;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     overflow-wrap: break-word;
